tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/method_sig_not_match2.bal
import ballerina/java;

public type Employee record {
    string name = "";
};

public function acceptRecordAndRecordReturnWhichThrowsCheckedException(Employee e, string newVal) returns Employee = @java:Method {
    'class:"org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"
} external;
